--- a/css/styles.css
+++ b/css/styles.css
@@ -246,11 +246,10 @@ body {
 
 .profile-page-content {
     position: relative;
-    height: 100vh;
     width: 100%;
-    color: white; 
-    display: flex; 
-    flex-direction: row; 
+    display: flex;
+    flex-direction: row;
+    min-height: 100vh;
 }
 
 /*  profile_page.html | LEFT SIDE OF PROFILE PAGE*/
@@ -258,7 +257,6 @@ body {
 .profile-left-page {
     flex: 1; 
     background-color: #D9D9D9; 
-    height: 960px;
 }
 
 .profile-username {
@@ -310,12 +308,12 @@ body {
 /* profile_page.html | RIGHT SIDE OF PROFILE PAGE*/
 
 .profile-right-page {
-    flex: 1.2; 
-    background-color: white;  
+    flex: 1.2;
+    background-color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 960px;
+    height: auto;
 }
 
 .profile-search-bar {
@@ -556,7 +554,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 960px;
+    width: 100%;
+    display: flex;
+    overflow-y: auto;
+    padding-bottom: 10rem;
 }
 
 .reservation-box {
